# Active-Safety

./: .gitignore  CMakeLists.txt  README.md  compile.sh  package.xml  ros_compile.sh  run.sh
docs/: activeSafety.pseudo  communication  layout.txt  nearSpaceDetector.pseudo  setup.txt  test.cpp
libs/: README.md  geometry.cpp  geometry.h  i2c.cpp  i2c.h  log.h  potential_functions.h
models/: README.md  real_model.h  test_model.h
src/: config.h  loader.cpp  main.cpp  ros_loader.cpp
src/helpers/: Potential.cpp  Potential.h  README.md  SonarReader.cpp  SonarReader.h
src/interfaces/: ActiveSafetyInterface.cpp  ActiveSafetyInterface.h  BJOSControllerInterface.h  BJOSSonarInterface.h  ControllerInterface.h  DevantechSonarInterface.cpp  DevantechSonarInterface.h  ForwardingGlobalPositionInterface.h  GlobalPositionInterface.h  PhysicalSonarInterface.h  README.md  RosControllerInterface.cpp  RosControllerInterface.h  RosSonarInterface.cpp  RosSonarInterface.h  SonarInterface.h  SystemInterface.h  TestSonarInterface.cpp  TestSonarInterface.h
src/modules/: ActiveSafety.cpp  ActiveSafety.h  NearSpaceDetector.cpp  NearSpaceDetector.h
src/sensors/: DistanceSensor.h  README.md  SonarSensor.cpp  SonarSensor.h
tests/: README.md  test_potentials.cpp
